--- a/CSharpFundamentals/CSharpFundamentals_ConsoleIO/FallingRocks/FallingRocks.csproj
+++ b/CSharpFundamentals/CSharpFundamentals_ConsoleIO/FallingRocks/FallingRocks.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="FallingRocks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rock.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
