--- a/CSharpFundamentals/CSharpFundamentals_ConsoleIO/FallingRocks/FallingRocks.csproj
+++ b/CSharpFundamentals/CSharpFundamentals_ConsoleIO/FallingRocks/FallingRocks.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FallingRocks.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rock.cs" />
   </ItemGroup>
